# pp2i-sdl-game

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
apps/: Application.c  Donjon.c  StartScene.h
apps/DataStructures/: Data.c  Graph.c  List.c  Type.c  Vector.c
apps/Scenes/: DungeonScene.c  ForestScene.c  MainScene.c  StartScene.c
assets/models/Foret/: DungeonForestDoor.mtl  forest.mtl
assets/models/Gobelin/: GobelinDying.dae  GobelinHitting.dae  GobelinIdle.dae  GobelinSpear.dae  GobelinSword.dae  GobelinWalk.dae  Mutant Walking.dae  gobelin.mtl
assets/models/Goblin/: Goblin_Run.dae  Mutant Punch.dae  Mutant Swiping.dae
assets/models/Golem/: Golem_Idle.dae  Mutant Breathing Idle.dae  Mutant Breathing Idle2.dae  Mutant Dying.dae  Mutant Jump Attack.dae  Mutant Swiping.dae  Mutant Walking.dae  Standing React Small From Left.dae
assets/models/GolemBleu/: Mutant Breathing Idle.dae  Mutant Dying.dae  Mutant Hit.dae  Mutant Jump Attack.dae  Mutant Swiping.dae  Mutant Walking.dae
assets/models/GolemViolet/: Mutant Breathing Idle.dae  Mutant Dying.dae  Mutant Jump Attack.dae  Mutant Swiping.dae  Mutant Walking copy.dae  Mutant Walking.dae  Standing React Small From Left.dae
assets/models/LoPotitChat/: LoPotitChat.mtl  PlayerAttack.dae  PlayerIdle.dae  PlayerRunning.dae  PlayerWalk.dae  Silly Dancing.dae  Stable Sword Outward Slash.dae  Sword And Shield Attack.dae  Walking.dae  player.dae  sword.mtl
assets/models/Room/: ColB.mtl
assets/models/Skeleton/: Bayonet Stab.dae  Breathing Idle.dae  Dying.dae  Standing React Large From Front.dae  Sword And Shield Slash.dae  Sword And Shield Walk.dae
assets/models/main/: falaisestart.mtl  main.mtl
assets/models/map/: main.mtl  map.mtl
assets/models/rock/: scene.gltf
assets/models/start/: col.mtl  start.mtl
assets/models/table/: table.mtl
assets/shaders/: anim.vs  default.fs  default.vs  shadowMap.vs  text.fs  text.vs
docs/CR réunion/: Compte rendu 03 PP2I2.pdf:Zone.Identifier  Compte rendu 1 PP2I2-3.pdf:Zone.Identifier  Compte rendu 2 PP2I2-1.pdf:Zone.Identifier  Compte rendu 4 PP2I2.pdf:Zone.Identifier  Compte rendu 5 PP2I2.pdf:Zone.Identifier  Compte rendu 6 PP2I2.pdf:Zone.Identifier
docs/html/: _algebra_8h.html  _algebra_8h__dep__incl.map  _algebra_8h__dep__incl.md5  _algebra_8h__incl.map  _algebra_8h__incl.md5  _algebra_8h_source.html  _animation_8h.html  _animation_8h__dep__incl.map  _animation_8h__dep__incl.md5  _animation_8h__incl.map  _animation_8h__incl.md5  _animation_8h_source.html  _animator_8h.html  _animator_8h__dep__incl.map  _animator_8h__dep__incl.md5  _animator_8h__incl.map  _animator_8h__incl.md5  _animator_8h_source.html  _application_8c.html  _application_8c__incl.map  _application_8c__incl.md5  _audio_8h.html  _audio_8h__dep__incl.map  _audio_8h__dep__incl.md5  _audio_8h__incl.map  _audio_8h__incl.md5  _audio_8h_source.html  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _chest_8h_source.html  _collider_8h.html  _collider_8h__dep__incl.map  _collider_8h__dep__incl.md5  _collider_8h__incl.map  _collider_8h__incl.md5  _collider_8h_source.html  (+556 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  (+77 more)
docs/latex/: _algebra_8h.tex  _algebra_8h__dep__incl.md5  _algebra_8h__incl.md5  _animation_8h.tex  _animation_8h__dep__incl.md5  _animation_8h__incl.md5  _animator_8h.tex  _animator_8h__dep__incl.md5  _animator_8h__incl.md5  _application_8c.tex  _application_8c__incl.md5  _audio_8h.tex  _audio_8h__dep__incl.md5  _audio_8h__incl.md5  _camera_8h.tex  _camera_8h__dep__incl.md5  _camera_8h__incl.md5  _collider_8h.tex  _collider_8h__dep__incl.md5  _collider_8h__incl.md5  _component_8h.tex  _component_8h__dep__incl.md5  _component_8h__incl.md5  _controls_8c.tex  _controls_8c__incl.md5  _controls_8h.tex  _controls_8h__dep__incl.md5  _controls_8h__incl.md5  _data_8h.tex  _data_8h__dep__incl.md5  _data_8h__incl.md5  _dungeon_8h.tex  _dungeon_8h__dep__incl.md5  _dungeon_8h__incl.md5  _dungeon_scene_8c.tex  _dungeon_scene_8c__incl.md5  _dungeon_scene_8h.tex  _dungeon_scene_8h__dep__incl.md5  _dungeon_scene_8h__incl.md5  _enemy_8h.tex  (+172 more)
glad/: CMakeLists.txt
glad/src/: glad.c
include/: Algebra.h  Animation.h  Animator.h  Audio.h  Camera.h  Chest.h  Collider.h  Component.h  Controls.h  Data.h  Dungeon.h  DungeonScene.h  DungeonTest.h  Enemy.h  Engine.h  Ennemy.h  Entity.h  Event.h  ForestScene.h  Game.h  GameState.h  Graph.h  Inventory.h  Light.h  List.h  MainScene.h  Marchand.h  Marchant.h  Material.h  Menu.h  MenuTest.h  Mesh.h  Model.h  ModelLoader.h  Objects.h  Player.h  ReadShader.h  Renderer.h  Room.h  Scene.h  (+13 more)
libs/ccd/: libccd.2.0.dylib  libccd.so.2.0
libs/cglm/: libcglm.0.9.4.dylib  libcglm.0.dylib  libcglm.dylib  libcglm.so.0  libcglm.so.0.9.3
libs/glad/: CMakeLists.txt
libs/glad/src/: glad.c  glad.c:Zone.Identifier
scripts/: run.sh
src/: Game.c  Graph.c  Graph.h  main.c
src/DataStructures/: Data.c  Data.h  Graph.c  Graph.h  Tree.c  Tree.h  Type.c  Vector.c  Vector.h
src/DataStructures/tests/: TreeTest.c  VectorTest.c
src/ECS/: Component.c
src/Engine/: Application.c
src/Engine/Animation/: Animation.c  Animator.c
src/Engine/Core/: Application.c  Audio.c  Controls.c  Engine.c  Mesh.c  Player.c  Shader.c  Shader.h  Window.c  fragment.glsl  test_Player.c
src/Game/: Chest.c  Dungeon.c  DungeonScene.c  Ennemy.c  ForestScene.c  Inventory.c  Marchand.c  Marchant.c  Object.c  Player.c  Room.c
src/Scene/: Scene.c
src/Utils/: Algebra.c  ReadShader.c  glad.c
src/tests/: GraphTest.c
tests/: DungeonTest.c  MainTest.c  MenuTest.c  ModelLoaderTest.c
(+42 files in other folders)
